# optimization-sampling-spin-glasses

./: .gitignore  README.md  final_run_random_graphs.py  phase_transition_analysis.py  plot_alpha_selection.py  preliminary_analysis.py  preliminary_optimization.py  preliminary_sampling.py  project_proposal.tex  pyproject.toml  sweep_alpha_ising.py  sweep_pm1_random.py  sweep_reg_ising.py
animations/arrhenius_wall/: scene.py
animations/energy_landscape/: scene.py
animations/glass_transition/: scene.py
animations/hmc_contrast/: scene.py
animations/parallel_tempering/: scene.py
animations/relaxed_sampling/: scene.py
animations/spin_configuration/: scene.py
scripts/: run_canonical_study.py
spinglass/: __init__.py  __main__.py  cli.py
spinglass/couplings/: __init__.py  lattice.py  sk.py  sparse_graph.py
spinglass/diagnostics/: __init__.py  mcmc_stats.py  observables.py  summaries.py
spinglass/experiments/: __init__.py  benchmarks.py  budget.py  builders.py  grids.py  io.py  overlap.py  presets.py  results_dir.py  runner.py  studies.py
spinglass/hamiltonian/: __init__.py  discrete.py  relaxed.py
spinglass/models/: __init__.py  base.py  edwards_anderson.py  ising2d.py  sk.py  sparse_glass.py
spinglass/optimizers/: __init__.py  adam.py  discrete_greedy.py  gradient_descent.py  parallel_tempering.py  simulated_annealing.py
tests/: run_all.py  test_budget_and_disorder.py  test_column_cache.py  test_discrete_energy.py  test_incremental_fields.py  test_mcmc_stats.py  test_parallel_tempering.py  test_presets.py  test_relaxed_gradient.py
(+17 files in other folders)
